--- a/style.css
+++ b/style.css
@@ -28,13 +28,17 @@ body {
 
 .fade {
   background-color: rgba(214,116,116,1);
-  transition-property: background-color;
-  transition-duration: 5s;
+  transition: 0s;
+  transition: background-color 5s;
 }
 
 .hover {
   border: 4px solid rgba(79,47,47,1);
   transition: 0s;
+}
+
+.fade.hover {
+  transition: background-color 5s;
 }
 
 p.score {
