--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+main {
+  font-family: 'Source Code Pro', monospace;
+}
+
 body {
   margin: 0;
   display: flex;
@@ -35,6 +39,7 @@ body {
 .hover {
   border: 4px solid rgba(79,47,47,1);
   transition: 0s;
+  cursor: pointer;
 }
 
 .fade.hover {
@@ -46,14 +51,30 @@ p.score {
 }
 
 .gameovertext {
-  font-size: 30px;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 40px;
   text-align: center;
   padding: 100px;
-  border: black 2px solid;
-  background-color: rgba(170,162,161,1);
+  border: rgb(139, 107, 107) 10px solid;
+  background-color: rgba(165, 123, 117, 0.4); 
   color: rgba(138,53,40,1);
+  line-height: 1.5;
 }
 
 .end-score {
   color: black;
+  font-size: 25px;
+}
+
+.retry {
+  color: rgb(92, 91, 91);
+  font-family: 'Source Code Pro', monospace;
+  font-size: 30px;
+}
+
+.retry-hover {
+  color: rgb(129, 127, 127);
+  transition: 0.5s;
+  text-decoration: underline;
+  cursor: pointer;
 }
