--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: rgba(214,218,218,1);
+  background-color: black;
 }
 
 .grid {
@@ -26,12 +26,12 @@ body {
   width: 6rem;
   height: 6rem;
   background-color: rgba(60,66,65,1);
-  border: 4px solid rgba(214,218,218,1);
+  border: 4px solid rgb(110, 109, 109);
   transition: 0s;
 }
 
 .fade {
-  background-color: rgba(214,116,116,1);
+  background-color: rgb(192, 106, 106);
   transition: 0s;
   transition: background-color 5s;
 }
@@ -48,6 +48,7 @@ body {
 
 p.score {
   margin: auto;
+  color: rgb(187, 187, 187);
 }
 
 .gameovertext {
@@ -55,7 +56,7 @@ p.score {
   font-size: 40px;
   text-align: center;
   padding: 100px;
-  border: rgb(139, 107, 107) 10px solid;
+  border: rgb(126, 47, 47) 10px solid;
   background-color: rgba(165, 123, 117, 0.4); 
   color: rgba(138,53,40,1);
   line-height: 1.5;
@@ -67,7 +68,7 @@ p.score {
 }
 
 .retry {
-  color: rgb(92, 91, 91);
+  color: rgb(145, 145, 145);
   font-family: 'Source Code Pro', monospace;
   font-size: 30px;
 }
